--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -19,8 +19,19 @@
 /* Extra large devices (large desktops, 1200px and up)*/
 @media only screen and  (min-width: 1200px) { 
 	.head_bar{
-		background-color: rgba(242, 242, 242, 1);
+		background-color: #ffffff;
+		padding-top: 1em;
+		padding-bottom: 1em;
 	}
+	.i_ml_head{
+		margin-left: 3em;
+	}
+
+	.i_h_m_l_1{
+		margin-right: 1.5em;
+    	margin-left: 1.5em;
+	}
+
 	
 	.inline_flex{
 		display: inline-flex !important;
